<resources>
    <string name="app_name">My Parking Spot</string>
    <string name="map">Mapa</string>
    <string name="history">Historial</string>
    <string name="profile">Perfil</string>
    <string name="profile_edit">Editar perfil</string>
    <string name="user_information">Información de usuario</string>
    <string name="label_name">Nombre</string>
    <string name="label_family_name">Apellidos</string>
    <string name="label_id">DNI</string>
    <string name="label_phone">Teléfono</string>
    <string name="car_information">Información del coche</string>
    <string name="label_manufacturer">Marca</string>
    <string name="label_model">Modelo</string>
    <string name="label_plate">Matrícula</string>
    <string name="action_edit_profile">EDITAR PERFIL</string>
    <string name="user_preference_file">User Shared Preferences</string>
    <string name="action_save_profile">Guardar perfil</string>
    <string name="snack_profile_saved">Perfil guardado correctamente</string>
    <string name="title_activity_maps">Map</string>
    <string name="location_preference_file">Location Preference File</string>
    <string name="latitude_key">LATITUDE</string>
    <string name="longitude_key">LONGITUDE</string>
    <string name="location_added_success">Posicion añadida correctamente</string>
    <string name="location_view_last_error">No hay posiciones guardadas</string>
    <string name="add_location_location_error">Activa la ubicación</string>
</resources>
