<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_map">

    <fragment
        android:id="@+id/navigation_map"
        android:name="com.example.myparkingspot.ui.map.MapFragment"
        android:label="@string/map"
        tools:layout="@layout/fragment_map" />

    <fragment
        android:id="@+id/navigation_history"
        android:name="com.example.myparkingspot.ui.history.HistoryFragment"
        android:label="@string/history"
        tools:layout="@layout/fragment_history" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.myparkingspot.ui.profile.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" >
        <action
            android:id="@+id/profile_to_edit_profile"
            app:destination="@id/navigation_edit_profile"
            app:popUpTo="@id/navigation_profile" />
    </fragment>
    <fragment
        android:id="@+id/navigation_edit_profile"
        android:name="com.example.myparkingspot.ui.profile.ProfileEditFragment"
        android:label="@string/profile_edit"
        tools:layout="@layout/fragment_edit_profile" >
        <action
            android:id="@+id/edit_profile_to_profile"
            app:destination="@id/navigation_profile" />
    </fragment>
</navigation>
